# bevy_craft

./: Cargo.toml
assets/bevy_craft/models/block/: cherry_stairs.json  cube.json  cube_all.json  dirt.json  grass_block.json  stairs.json  stone.json
src/: chunk.rs  lib.rs  main.rs
src/assets/: mod.rs  plugin.rs
src/assets/models/: element.rs  face.rs  loader.rs  manager.rs  mod.rs  model.rs
src/assets/textures/: atlas.rs  loader.rs  mod.rs  texture.rs
src/chunks/: chunk.rs  mod.rs
src/identity/: block_id.rs  mod.rs  texture_id.rs
src/identity/block/: mod.rs
src/models/: element.rs  loader.rs  manager.rs  mod.rs  model.rs  plugin.rs  texture.rs
src/render/: meshing.rs  mod.rs  voxel.rs
