[package]
name = "bevy_craft"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.2", features = ["wayland", "serialize"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
derive_more = { version = "1", default-features = false, features = [
    "error",
    "from",
    "display",
    "into_iterator",
] }
bevy_asset_loader = { version = "0.22.0", features = [
    "standard_dynamic_assets",
] }
topo_sort = "0.4.0"
noise = "0.9.0"
